--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_verification_code: ^1.1.3+1
   font_awesome_flutter: ^10.1.0
   flutter_rating_bar: ^4.0.1
+  flutter_timer_countdown: ^1.0.3
 
 dev_dependencies:
   flutter_test:
